Issue #3282773 by hlopez: Source chip styling misaligned
(cherry picked from commit 9f20991b50aa86bc0ef84b7d4167402ff93a838b)

--- a/css/lingotek.actions.css
+++ b/css/lingotek.actions.css
@@ -32,6 +32,7 @@
 .lingotek-target-dropdown {
   position: relative;
   display: inline-block;
+  width: 70px;
 }
 
 .lingotek-source-actions,
